--- a/public/create-quiz.html
+++ b/public/create-quiz.html
@@ -433,6 +433,27 @@
         ).toUpperCase();
       }
 
+      // Fetch and populate categories
+      async function loadCategories() {
+        try {
+          const response = await fetch("/api/categories");
+          const data = await response.json();
+          const categorySelect = document.getElementById("category");
+
+          if (data.categories && data.categories.length > 0) {
+            categorySelect.innerHTML =
+              '<option value="">Select a category</option>' +
+              data.categories
+                .map((cat) => `<option value="${cat._id}">${cat.name}</option>`)
+                .join("");
+          }
+        } catch (error) {
+          console.error("Error loading categories:", error);
+        }
+      }
+
+      loadCategories();
+
       // Question counter
       let questionCount = 0;
       const questionsContainer = document.getElementById("questionsContainer");
@@ -488,43 +509,86 @@
         .addEventListener("submit", async (e) => {
           e.preventDefault();
 
-          const questions = [];
-          document.querySelectorAll(".question-item").forEach((item) => {
-            const questionText = item.querySelector(".question-text").value;
-            const options = [];
-            let correctIndex = 0;
+          const publishBtn = document.getElementById("publishBtn");
+          const originalBtnText = publishBtn.innerHTML;
 
-            item.querySelectorAll(".option-text").forEach((opt, i) => {
-              options.push({ text: opt.value, isCorrect: false });
+          try {
+            // Disable button and show loading state
+            publishBtn.disabled = true;
+            publishBtn.innerHTML =
+              '<i data-lucide="loader-2" class="w-4 h-4 animate-spin"></i> Publishing...';
+            lucide.createIcons();
+
+            const questions = [];
+            document.querySelectorAll(".question-item").forEach((item) => {
+              const questionText = item.querySelector(".question-text").value;
+              const options = [];
+              let correctIndex = 0;
+
+              item.querySelectorAll(".option-text").forEach((opt, i) => {
+                options.push({ text: opt.value, isCorrect: false });
+              });
+
+              const selectedRadio = item.querySelector(
+                ".correct-option:checked",
+              );
+              if (selectedRadio) {
+                correctIndex = parseInt(selectedRadio.value);
+                options[correctIndex].isCorrect = true;
+              }
+
+              questions.push({ questionText, options });
             });
 
-            const selectedRadio = item.querySelector(".correct-option:checked");
-            if (selectedRadio) {
-              correctIndex = parseInt(selectedRadio.value);
-              options[correctIndex].isCorrect = true;
+            const quizData = {
+              title: document.getElementById("title").value,
+              description: document.getElementById("description").value,
+              category: document.getElementById("category").value,
+              difficulty: document.getElementById("difficulty").value,
+              timeLimit: parseInt(document.getElementById("timeLimit").value),
+              passPercentage: parseInt(
+                document.getElementById("passPercentage").value,
+              ),
+              questions,
+              isPublished: true,
+            };
+
+            const response = await fetch("/api/quizzes", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: `Bearer ${localStorage.getItem("accessToken")}`,
+              },
+              body: JSON.stringify(quizData),
+            });
+
+            const data = await response.json();
+
+            if (!response.ok) {
+              throw new Error(data.error || "Failed to create quiz");
             }
 
-            questions.push({ questionText, options });
-          });
+            // Success feedback
+            const toast = document.createElement("div");
+            toast.className =
+              "fixed bottom-8 right-8 bg-green-500 text-white px-6 py-4 rounded-2xl shadow-2xl flex items-center gap-3 z-50 animate-bounce";
+            toast.innerHTML =
+              '<i data-lucide="check-circle" class="w-6 h-6"></i> <div><p class="font-bold">Success!</p><p class="text-sm">Quiz published successfully.</p></div>';
+            document.body.appendChild(toast);
+            lucide.createIcons();
 
-          const quizData = {
-            title: document.getElementById("title").value,
-            description: document.getElementById("description").value,
-            category: document.getElementById("category").value,
-            difficulty: document.getElementById("difficulty").value,
-            timeLimit: parseInt(document.getElementById("timeLimit").value),
-            passPercentage: parseInt(
-              document.getElementById("passPercentage").value,
-            ),
-            questions,
-            isPublished: true,
-          };
+            setTimeout(() => {
+              window.location.href = "/quizzes.html";
+            }, 2000);
+          } catch (error) {
+            console.error("Quiz creation error:", error);
+            alert(error.message);
 
-          console.log("Quiz Data:", quizData);
-          alert(
-            "Quiz created successfully! (Demo mode - not saved to database)",
-          );
-          window.location.href = "/quizzes.html";
+            // Restore button state
+            publishBtn.disabled = false;
+            publishBtn.innerHTML = originalBtnText;
+            lucide.createIcons();
+          }
         });
 
       // Logout
