--- a/public/quizzes.html
+++ b/public/quizzes.html
@@ -640,14 +640,175 @@
         ).toUpperCase();
       }
 
-      // Search functionality
-      document.getElementById("searchInput").addEventListener("input", (e) => {
-        const query = e.target.value.toLowerCase();
-        document.querySelectorAll("#quizzesGrid > div").forEach((card) => {
-          const title = card.querySelector("h3").textContent.toLowerCase();
-          card.style.display = title.includes(query) ? "" : "none";
+      // Fetch and display quizzes
+      async function loadQuizzes() {
+        const quizzesGrid = document.getElementById("quizzesGrid");
+
+        try {
+          const response = await fetch(`/api/quizzes?teacher=${user.id}`, {
+            headers: {
+              Authorization: `Bearer ${localStorage.getItem("accessToken")}`,
+            },
+          });
+          const data = await response.json();
+
+          if (!response.ok) throw new Error(data.error);
+
+          const quizzes = data.quizzes || [];
+
+          // Update Stats Summary
+          const total = quizzes.length;
+          const published = quizzes.filter((q) => q.isPublished).length;
+          const drafts = total - published;
+          const attempts = quizzes.reduce(
+            (sum, q) => sum + (q.attemptCount || 0),
+            0,
+          );
+
+          const statsContainers = document.querySelectorAll(
+            ".grid.grid-cols-1.md\\:grid-cols-4 .text-2xl.font-bold",
+          );
+          if (statsContainers.length >= 4) {
+            statsContainers[0].textContent = total;
+            statsContainers[1].textContent = published;
+            statsContainers[2].textContent = drafts;
+            statsContainers[3].textContent = attempts;
+          }
+
+          if (quizzes.length === 0) {
+            quizzesGrid.innerHTML = `
+              <div class="col-span-full text-center py-20 bg-zinc-900/50 border border-zinc-800 border-dashed rounded-3xl">
+                <div class="w-20 h-20 bg-brand-500/10 rounded-full flex items-center justify-center mx-auto mb-6">
+                  <i data-lucide="file-question" class="w-10 h-10 text-brand-400"></i>
+                </div>
+                <h2 class="text-2xl font-bold mb-2">No quizzes found</h2>
+                <p class="text-zinc-500 mb-8">You haven't created any quizzes yet. Start by creating your first one!</p>
+                <a href="/create-quiz.html" class="inline-flex items-center gap-2 px-6 py-3 bg-brand-500 hover:bg-brand-600 rounded-xl transition-colors font-medium">
+                  <i data-lucide="plus" class="w-5 h-5"></i>
+                  Create First Quiz
+                </a>
+              </div>
+            `;
+            lucide.createIcons();
+            return;
+          }
+
+          renderQuizzes(quizzes);
+
+          // Store for filtering
+          window.allQuizzes = quizzes;
+        } catch (error) {
+          console.error("Load quizzes error:", error);
+          quizzesGrid.innerHTML = `<div class="col-span-full text-center py-10 text-red-500">Error loading quizzes: ${error.message}</div>`;
+        }
+      }
+
+      function renderQuizzes(quizzes) {
+        const quizzesGrid = document.getElementById("quizzesGrid");
+        quizzesGrid.innerHTML = quizzes
+          .map(
+            (quiz) => `
+          <div class="bg-zinc-900 border border-zinc-800 rounded-2xl overflow-hidden hover:border-zinc-700 transition-all hover:shadow-2xl group" data-id="${quiz._id}">
+            <div class="p-6">
+              <div class="flex items-start justify-between mb-4">
+                <div class="w-12 h-12 bg-brand-500/20 rounded-xl flex items-center justify-center">
+                  <i data-lucide="${quiz.category?.icon || "book-open"}" class="w-6 h-6 text-brand-400"></i>
+                </div>
+                <span class="px-2 py-1 ${quiz.isPublished ? "bg-green-500/10 text-green-400" : "bg-zinc-700 text-zinc-400"} text-xs font-medium rounded-full">
+                  ${quiz.isPublished ? "Published" : "Draft"}
+                </span>
+              </div>
+              <h3 class="text-lg font-semibold mb-2 group-hover:text-brand-400 transition-colors">${quiz.title}</h3>
+              <p class="text-zinc-500 text-sm mb-4 line-clamp-2">${quiz.description || "No description provided."}</p>
+              <div class="flex items-center gap-4 text-sm text-zinc-500">
+                <span class="flex items-center gap-1">
+                  <i data-lucide="help-circle" class="w-4 h-4"></i>
+                  ${quiz.questionCount || 0} questions
+                </span>
+                <span class="flex items-center gap-1">
+                  <i data-lucide="clock" class="w-4 h-4"></i>
+                  ${quiz.timeLimit || 0} min
+                </span>
+              </div>
+            </div>
+            <div class="border-t border-zinc-800 px-6 py-4 flex items-center justify-between bg-zinc-900/50">
+              <span class="text-sm text-zinc-500">${quiz.attemptCount || 0} attempts</span>
+              <div class="flex items-center gap-2">
+                <button class="p-2 hover:bg-zinc-800 rounded-lg transition-colors" title="View Results">
+                  <i data-lucide="bar-chart-3" class="w-4 h-4 text-zinc-400"></i>
+                </button>
+                <button class="p-2 hover:bg-zinc-800 rounded-lg transition-colors" title="Edit Quiz">
+                  <i data-lucide="edit" class="w-4 h-4 text-zinc-400"></i>
+                </button>
+                <button class="p-2 hover:bg-zinc-800 rounded-lg transition-colors text-red-400" onclick="deleteQuiz('${quiz._id}')" title="Delete">
+                  <i data-lucide="trash-2" class="w-4 h-4"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        `,
+          )
+          .join("");
+        lucide.createIcons();
+      }
+
+      // Delete Quiz
+      window.deleteQuiz = async function (id) {
+        if (
+          !confirm(
+            "Are you sure you want to delete this quiz? This action cannot be undone.",
+          )
+        )
+          return;
+
+        try {
+          const response = await fetch(`/api/quizzes/${id}`, {
+            method: "DELETE",
+            headers: {
+              Authorization: `Bearer ${localStorage.getItem("accessToken")}`,
+            },
+          });
+
+          if (!response.ok) {
+            const data = await response.json();
+            throw new Error(data.error || "Failed to delete quiz");
+          }
+
+          loadQuizzes();
+        } catch (error) {
+          alert(error.message);
+        }
+      };
+
+      loadQuizzes();
+
+      // Search and Filter functionality
+      const searchInput = document.getElementById("searchInput");
+      const statusFilter = document.getElementById("statusFilter");
+      const categoryFilter = document.getElementById("categoryFilter");
+
+      function applyFilters() {
+        const query = searchInput.value.toLowerCase();
+        const status = statusFilter.value;
+        const category = categoryFilter.value;
+
+        const filtered = window.allQuizzes.filter((quiz) => {
+          const matchesSearch = quiz.title.toLowerCase().includes(query);
+          const matchesStatus =
+            status === "all" ||
+            (status === "published" ? quiz.isPublished : !quiz.isPublished);
+          const matchesCategory =
+            category === "all" ||
+            quiz.category?.name?.toLowerCase() === category;
+          return matchesSearch && matchesStatus && matchesCategory;
         });
-      });
+
+        renderQuizzes(filtered);
+      }
+
+      searchInput.addEventListener("input", applyFilters);
+      statusFilter.addEventListener("change", applyFilters);
+      categoryFilter.addEventListener("change", applyFilters);
 
       // Logout
       document.getElementById("logoutBtn").addEventListener("click", () => {
