--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -368,13 +368,45 @@
     <script>
       lucide.createIcons();
 
-      // Check if user is logged in
-      const user = JSON.parse(localStorage.getItem("user") || "null");
-      const accessToken = localStorage.getItem("accessToken");
+      // Check if user is logged in via session
+      async function checkAuth() {
+        console.log("🔍 Checking authentication...");
+        try {
+          const response = await fetch("/api/auth/me", {
+            credentials: "include", // Important: Include cookies
+          });
 
-      if (!user || !accessToken) {
-        window.location.href = "/login.html";
-      } else {
+          console.log("🔍 Auth response status:", response.status);
+
+          if (!response.ok) {
+            // Not authenticated - redirect to login
+            console.log("❌ Not authenticated, redirecting to login");
+            localStorage.removeItem("user");
+            window.location.href = "/login.html";
+            return null;
+          }
+
+          const data = await response.json();
+          console.log("✅ Authenticated user:", data.user);
+          return data.user;
+        } catch (error) {
+          console.error("Auth check failed:", error);
+          localStorage.removeItem("user");
+          window.location.href = "/login.html";
+          return null;
+        }
+      }
+
+      // Initialize dashboard
+      async function initDashboard() {
+        // Check authentication
+        let user = await checkAuth();
+
+        if (!user) return; // Will redirect to login
+
+        // Update localStorage with fresh user data
+        localStorage.setItem("user", JSON.stringify(user));
+
         // Update UI with user data
         document.getElementById("userName").textContent =
           user.name || "Teacher";
@@ -383,15 +415,16 @@
         document.getElementById("userInitial").textContent = (
           user.name?.[0] || "T"
         ).toUpperCase();
+
+        // Load dashboard data
+        await loadDashboardData(user);
       }
 
       // Fetch and display dashboard data
-      async function loadDashboardData() {
+      async function loadDashboardData(user) {
         try {
           const response = await fetch(`/api/quizzes?teacher=${user.id}`, {
-            headers: {
-              Authorization: `Bearer ${localStorage.getItem("accessToken")}`,
-            },
+            credentials: "include", // Important: Include cookies
           });
           const data = await response.json();
 
@@ -457,25 +490,22 @@
         }
       }
 
-      loadDashboardData();
+      // Start initialization
+      initDashboard();
 
       // Logout functionality
       document
         .getElementById("logoutBtn")
         .addEventListener("click", async () => {
           try {
-            const refreshToken = localStorage.getItem("refreshToken");
             await fetch("/api/auth/logout", {
               method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ refreshToken }),
+              credentials: "include", // Important: Include cookies
             });
           } catch (e) {
             console.error("Logout error:", e);
           }
 
-          localStorage.removeItem("accessToken");
-          localStorage.removeItem("refreshToken");
           localStorage.removeItem("user");
           window.location.href = "/login.html";
         });
