--- a/public/register-teacher.html
+++ b/public/register-teacher.html
@@ -444,6 +444,7 @@
             headers: {
               "Content-Type": "application/json",
             },
+            credentials: "include", // Important: Include cookies in request
             body: JSON.stringify({
               name,
               email,
@@ -462,14 +463,12 @@
           // Show success
           successMessage.classList.remove("hidden");
 
-          // Store tokens
-          localStorage.setItem("accessToken", data.accessToken);
-          localStorage.setItem("refreshToken", data.refreshToken);
+          // Store user info in localStorage for quick access (session is in cookie)
           localStorage.setItem("user", JSON.stringify(data.user));
 
-          // Redirect to onboarding
+          // Redirect to dashboard (session is automatically set via cookie)
           setTimeout(() => {
-            window.location.href = "/onboarding-teacher.html";
+            window.location.href = "/dashboard.html";
           }, 1500);
         } catch (error) {
           // Show error
