--- a/public/results.html
+++ b/public/results.html
@@ -462,29 +462,15 @@
       </div>
     </main>
 
+    <!-- Auth Utilities -->
+    <script src="/js/auth.js"></script>
+
     <!-- Initialize Lucide Icons -->
     <script>
       lucide.createIcons();
 
-      // Check auth
-      const user = JSON.parse(localStorage.getItem("user") || "null");
-      const accessToken = localStorage.getItem("accessToken");
-
-      if (!user || !accessToken) {
-        window.location.href = "/login.html";
-      } else {
-        document.getElementById("userName").textContent =
-          user.name || "Teacher";
-        document.getElementById("userInitial").textContent = (
-          user.name?.[0] || "T"
-        ).toUpperCase();
-      }
-
-      // Logout
-      document.getElementById("logoutBtn").addEventListener("click", () => {
-        localStorage.clear();
-        window.location.href = "/login.html";
-      });
+      // Initialize authentication
+      initAuth();
     </script>
   </body>
 </html>
