--- a/public/create-quiz.html
+++ b/public/create-quiz.html
@@ -596,18 +596,53 @@
               throw new Error(data.error || "Failed to create quiz");
             }
 
-            // Success feedback
-            const toast = document.createElement("div");
-            toast.className =
-              "fixed bottom-8 right-8 bg-green-500 text-white px-6 py-4 rounded-2xl shadow-2xl flex items-center gap-3 z-50 animate-bounce";
-            toast.innerHTML =
-              '<i data-lucide="check-circle" class="w-6 h-6"></i> <div><p class="font-bold">Success!</p><p class="text-sm">Quiz published successfully.</p></div>';
-            document.body.appendChild(toast);
+            // Success Modal
+            const modal = document.createElement("div");
+            modal.className =
+              "fixed inset-0 z-50 flex items-center justify-center px-4";
+            modal.innerHTML = `
+              <div class="fixed inset-0 bg-black/80 backdrop-blur-sm transition-opacity"></div>
+              <div class="bg-zinc-900 border border-zinc-800 rounded-2xl w-full max-w-md p-6 relative z-10 shadow-2xl transform transition-all scale-100">
+                <div class="text-center mb-6">
+                  <div class="w-16 h-16 bg-green-500/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i data-lucide="check-circle" class="w-8 h-8 text-green-500"></i>
+                  </div>
+                  <h2 class="text-2xl font-bold mb-2">Quiz Published!</h2>
+                  <p class="text-zinc-400">Your quiz is now ready for students to join.</p>
+                </div>
+
+                <div class="space-y-4 mb-6">
+                  <div class="bg-zinc-800/50 rounded-xl p-4 border border-zinc-700">
+                    <label class="block text-xs font-medium text-zinc-500 uppercase tracking-wider mb-2">Access Code</label>
+                    <div class="flex items-center gap-2">
+                      <code class="flex-1 text-2xl font-mono font-bold text-center tracking-widest text-brand-400">${data.quiz.accessCode || "ERROR"}</code>
+                      <button onclick="navigator.clipboard.writeText('${data.quiz.accessCode}')" class="p-2 hover:bg-zinc-700 rounded-lg text-zinc-400 hover:text-white transition-colors" title="Copy Code">
+                        <i data-lucide="copy" class="w-5 h-5"></i>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="bg-zinc-800/50 rounded-xl p-4 border border-zinc-700">
+                    <label class="block text-xs font-medium text-zinc-500 uppercase tracking-wider mb-2">Join Link</label>
+                    <div class="flex items-center gap-2">
+                      <input type="text" value="${data.quiz.joinLink || ""}" readonly class="flex-1 bg-transparent text-sm text-zinc-300 outline-none w-full" />
+                      <button onclick="navigator.clipboard.writeText('${data.quiz.joinLink}')" class="p-2 hover:bg-zinc-700 rounded-lg text-zinc-400 hover:text-white transition-colors" title="Copy Link">
+                        <i data-lucide="link" class="w-5 h-5"></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <button onclick="window.location.href = '/quizzes.html'" class="w-full py-3 bg-brand-500 hover:bg-brand-600 rounded-xl font-semibold transition-colors">
+                  Go to My Quizzes
+                </button>
+              </div>
+            `;
+            document.body.appendChild(modal);
             lucide.createIcons();
 
-            setTimeout(() => {
-              window.location.href = "/quizzes.html";
-            }, 2000);
+            // Wait for user action instead of auto-redirect
+            return;
           } catch (error) {
             console.error("Quiz creation error:", error);
             alert(error.message);
