--- a/public/index.html
+++ b/public/index.html
@@ -259,6 +259,13 @@
                 Start as Teacher
               </a>
               <a
+                href="/join-quiz.html"
+                class="w-full sm:w-auto inline-flex items-center justify-center px-6 py-3 bg-green-600 hover:bg-green-700 text-white font-semibold rounded-xl transition-all border border-green-500"
+              >
+                <i data-lucide="user-plus" class="w-5 h-5 mr-2"></i>
+                Join Quiz
+              </a>
+              <a
                 href="/register-admin.html"
                 class="w-full sm:w-auto inline-flex items-center justify-center px-6 py-3 bg-zinc-800 hover:bg-zinc-700 text-white font-semibold rounded-xl transition-all border border-zinc-700"
               >
