--- a/public/quizzes.html
+++ b/public/quizzes.html
@@ -731,7 +731,7 @@
             <div class="border-t border-zinc-800 px-6 py-4 flex items-center justify-between bg-zinc-900/50">
               <span class="text-sm text-zinc-500">${quiz.attemptCount || 0} attempts</span>
               <div class="flex items-center gap-2">
-                <button class="p-2 hover:bg-zinc-800 rounded-lg transition-colors" title="View Results">
+                <button class="p-2 hover:bg-zinc-800 rounded-lg transition-colors" title="View Results" onclick="viewResults('${quiz._id}')">
                   <i data-lucide="bar-chart-3" class="w-4 h-4 text-zinc-400"></i>
                 </button>
                 <button class="p-2 hover:bg-zinc-800 rounded-lg transition-colors" title="Edit Quiz">
@@ -748,6 +748,11 @@
           .join("");
         lucide.createIcons();
       }
+
+      // View Results
+      window.viewResults = function (id) {
+        window.location.href = `/quiz-results.html?id=${id}`;
+      };
 
       // Delete Quiz
       window.deleteQuiz = async function (id) {
