--- a/public/create-quiz.html
+++ b/public/create-quiz.html
@@ -593,7 +593,17 @@
             const data = await response.json();
 
             if (!response.ok) {
-              throw new Error(data.error || "Failed to create quiz");
+              // Show detailed error message
+              let errorMsg = data.error || "Failed to create quiz";
+              if (data.details && Array.isArray(data.details)) {
+                errorMsg += ": " + data.details.join(", ");
+              } else if (data.details) {
+                errorMsg += ": " + data.details;
+              }
+              if (data.availableCategories) {
+                errorMsg += "\nAvailable categories: " + data.availableCategories.join(", ");
+              }
+              throw new Error(errorMsg);
             }
 
             // Success Modal
@@ -645,7 +655,31 @@
             return;
           } catch (error) {
             console.error("Quiz creation error:", error);
-            alert(error.message);
+            
+            // Create error modal with better message display
+            const errorModal = document.createElement("div");
+            errorModal.className =
+              "fixed inset-0 z-50 flex items-center justify-center px-4";
+            errorModal.innerHTML = `
+              <div class="fixed inset-0 bg-black/80 backdrop-blur-sm transition-opacity"></div>
+              <div class="bg-zinc-900 border border-red-800/50 rounded-2xl w-full max-w-md p-6 relative z-10 shadow-2xl transform transition-all scale-100">
+                <div class="text-center mb-6">
+                  <div class="w-16 h-16 bg-red-500/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i data-lucide="alert-circle" class="w-8 h-8 text-red-500"></i>
+                  </div>
+                  <h2 class="text-2xl font-bold mb-2 text-red-500">Error Publishing Quiz</h2>
+                  <p class="text-zinc-300 text-sm whitespace-pre-wrap">${error.message}</p>
+                </div>
+
+                <div class="space-y-3">
+                  <button onclick="this.closest('.fixed').remove()" class="w-full py-3 bg-zinc-800 hover:bg-zinc-700 rounded-xl font-semibold transition-colors">
+                    Try Again
+                  </button>
+                </div>
+              </div>
+            `;
+            document.body.appendChild(errorModal);
+            lucide.createIcons();
 
             // Restore button state
             publishBtn.disabled = false;
