--- a/public/register-teacher.html
+++ b/public/register-teacher.html
@@ -457,7 +457,14 @@
           const data = await response.json();
 
           if (!response.ok) {
-            throw new Error(data.error || "Registration failed");
+            // Show detailed error message
+            let errorMsg = data.error || "Registration failed";
+            if (data.details && Array.isArray(data.details)) {
+              errorMsg += ": " + data.details.join(", ");
+            } else if (data.details) {
+              errorMsg += ": " + data.details;
+            }
+            throw new Error(errorMsg);
           }
 
           // Show success
@@ -472,6 +479,7 @@
           }, 1500);
         } catch (error) {
           // Show error
+          console.error("Registration error:", error);
           errorText.textContent = error.message;
           errorMessage.classList.remove("hidden");
 
