--- a/public/results.html
+++ b/public/results.html
@@ -147,7 +147,7 @@
               <i data-lucide="users" class="w-6 h-6 text-brand-400"></i>
             </div>
           </div>
-          <p class="text-3xl font-bold mb-1">234</p>
+          <p class="text-3xl font-bold mb-1" id="totalAttempts">0</p>
           <p class="text-zinc-500 text-sm">Total Attempts</p>
         </div>
 
@@ -159,7 +159,7 @@
               <i data-lucide="check-circle" class="w-6 h-6 text-green-400"></i>
             </div>
           </div>
-          <p class="text-3xl font-bold mb-1">78%</p>
+          <p class="text-3xl font-bold mb-1" id="avgScore">0%</p>
           <p class="text-zinc-500 text-sm">Average Score</p>
         </div>
 
@@ -171,7 +171,7 @@
               <i data-lucide="trophy" class="w-6 h-6 text-amber-400"></i>
             </div>
           </div>
-          <p class="text-3xl font-bold mb-1">92%</p>
+          <p class="text-3xl font-bold mb-1" id="highScore">0%</p>
           <p class="text-zinc-500 text-sm">Highest Score</p>
         </div>
 
@@ -183,7 +183,7 @@
               <i data-lucide="percent" class="w-6 h-6 text-purple-400"></i>
             </div>
           </div>
-          <p class="text-3xl font-bold mb-1">85%</p>
+          <p class="text-3xl font-bold mb-1" id="passRate">0%</p>
           <p class="text-zinc-500 text-sm">Pass Rate</p>
         </div>
       </div>
@@ -191,14 +191,13 @@
       <!-- Filters -->
       <div class="flex flex-wrap gap-4 mb-6">
         <select
+          id="quizFilter"
           class="px-4 py-3 bg-zinc-900 border border-zinc-800 rounded-xl focus:border-brand-500 outline-none transition-colors"
         >
           <option value="all">All Quizzes</option>
-          <option value="math">Mathematics - Chapter 5</option>
-          <option value="science">Science - Biology Basics</option>
-          <option value="english">English Grammar Test</option>
         </select>
         <select
+          id="timeFilter"
           class="px-4 py-3 bg-zinc-900 border border-zinc-800 rounded-xl focus:border-brand-500 outline-none transition-colors"
         >
           <option value="all">All Time</option>
@@ -259,164 +258,11 @@
                 </th>
               </tr>
             </thead>
-            <tbody class="divide-y divide-zinc-800">
-              <tr class="hover:bg-zinc-800/50 transition-colors">
-                <td class="px-6 py-4">
-                  <div class="flex items-center gap-3">
-                    <div
-                      class="w-8 h-8 bg-brand-500 rounded-full flex items-center justify-center"
-                    >
-                      <span class="text-sm font-medium">JD</span>
-                    </div>
-                    <span class="font-medium">John Doe</span>
-                  </div>
-                </td>
-                <td class="px-6 py-4 text-zinc-400">Mathematics - Chapter 5</td>
-                <td class="px-6 py-4">
-                  <span class="text-green-400 font-semibold">92%</span>
-                </td>
-                <td class="px-6 py-4">
-                  <span
-                    class="px-2 py-1 bg-green-500/10 text-green-400 text-xs font-medium rounded-full"
-                    >Passed</span
-                  >
-                </td>
-                <td class="px-6 py-4 text-zinc-400">18 min</td>
-                <td class="px-6 py-4 text-zinc-400">Jan 21, 2026</td>
-                <td class="px-6 py-4 text-right">
-                  <button
-                    class="p-2 hover:bg-zinc-700 rounded-lg transition-colors"
-                  >
-                    <i data-lucide="eye" class="w-4 h-4 text-zinc-400"></i>
-                  </button>
-                </td>
-              </tr>
-              <tr class="hover:bg-zinc-800/50 transition-colors">
-                <td class="px-6 py-4">
-                  <div class="flex items-center gap-3">
-                    <div
-                      class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center"
-                    >
-                      <span class="text-sm font-medium">SJ</span>
-                    </div>
-                    <span class="font-medium">Sarah Johnson</span>
-                  </div>
-                </td>
-                <td class="px-6 py-4 text-zinc-400">
-                  Science - Biology Basics
-                </td>
-                <td class="px-6 py-4">
-                  <span class="text-green-400 font-semibold">85%</span>
-                </td>
-                <td class="px-6 py-4">
-                  <span
-                    class="px-2 py-1 bg-green-500/10 text-green-400 text-xs font-medium rounded-full"
-                    >Passed</span
-                  >
-                </td>
-                <td class="px-6 py-4 text-zinc-400">22 min</td>
-                <td class="px-6 py-4 text-zinc-400">Jan 21, 2026</td>
-                <td class="px-6 py-4 text-right">
-                  <button
-                    class="p-2 hover:bg-zinc-700 rounded-lg transition-colors"
-                  >
-                    <i data-lucide="eye" class="w-4 h-4 text-zinc-400"></i>
-                  </button>
-                </td>
-              </tr>
-              <tr class="hover:bg-zinc-800/50 transition-colors">
-                <td class="px-6 py-4">
-                  <div class="flex items-center gap-3">
-                    <div
-                      class="w-8 h-8 bg-amber-500 rounded-full flex items-center justify-center"
-                    >
-                      <span class="text-sm font-medium">MK</span>
-                    </div>
-                    <span class="font-medium">Mike Kim</span>
-                  </div>
-                </td>
-                <td class="px-6 py-4 text-zinc-400">Mathematics - Chapter 5</td>
-                <td class="px-6 py-4">
-                  <span class="text-red-400 font-semibold">45%</span>
-                </td>
-                <td class="px-6 py-4">
-                  <span
-                    class="px-2 py-1 bg-red-500/10 text-red-400 text-xs font-medium rounded-full"
-                    >Failed</span
-                  >
-                </td>
-                <td class="px-6 py-4 text-zinc-400">30 min</td>
-                <td class="px-6 py-4 text-zinc-400">Jan 20, 2026</td>
-                <td class="px-6 py-4 text-right">
-                  <button
-                    class="p-2 hover:bg-zinc-700 rounded-lg transition-colors"
-                  >
-                    <i data-lucide="eye" class="w-4 h-4 text-zinc-400"></i>
-                  </button>
-                </td>
-              </tr>
-              <tr class="hover:bg-zinc-800/50 transition-colors">
-                <td class="px-6 py-4">
-                  <div class="flex items-center gap-3">
-                    <div
-                      class="w-8 h-8 bg-green-500 rounded-full flex items-center justify-center"
-                    >
-                      <span class="text-sm font-medium">EW</span>
-                    </div>
-                    <span class="font-medium">Emily Wilson</span>
-                  </div>
-                </td>
-                <td class="px-6 py-4 text-zinc-400">English Grammar Test</td>
-                <td class="px-6 py-4">
-                  <span class="text-green-400 font-semibold">78%</span>
-                </td>
-                <td class="px-6 py-4">
-                  <span
-                    class="px-2 py-1 bg-green-500/10 text-green-400 text-xs font-medium rounded-full"
-                    >Passed</span
-                  >
-                </td>
-                <td class="px-6 py-4 text-zinc-400">35 min</td>
-                <td class="px-6 py-4 text-zinc-400">Jan 20, 2026</td>
-                <td class="px-6 py-4 text-right">
-                  <button
-                    class="p-2 hover:bg-zinc-700 rounded-lg transition-colors"
-                  >
-                    <i data-lucide="eye" class="w-4 h-4 text-zinc-400"></i>
-                  </button>
-                </td>
-              </tr>
-              <tr class="hover:bg-zinc-800/50 transition-colors">
-                <td class="px-6 py-4">
-                  <div class="flex items-center gap-3">
-                    <div
-                      class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center"
-                    >
-                      <span class="text-sm font-medium">AC</span>
-                    </div>
-                    <span class="font-medium">Alex Chen</span>
-                  </div>
-                </td>
-                <td class="px-6 py-4 text-zinc-400">
-                  Science - Biology Basics
-                </td>
-                <td class="px-6 py-4">
-                  <span class="text-green-400 font-semibold">88%</span>
-                </td>
-                <td class="px-6 py-4">
-                  <span
-                    class="px-2 py-1 bg-green-500/10 text-green-400 text-xs font-medium rounded-full"
-                    >Passed</span
-                  >
-                </td>
-                <td class="px-6 py-4 text-zinc-400">20 min</td>
-                <td class="px-6 py-4 text-zinc-400">Jan 19, 2026</td>
-                <td class="px-6 py-4 text-right">
-                  <button
-                    class="p-2 hover:bg-zinc-700 rounded-lg transition-colors"
-                  >
-                    <i data-lucide="eye" class="w-4 h-4 text-zinc-400"></i>
-                  </button>
+            <tbody id="resultsTableBody" class="divide-y divide-zinc-800">
+              <tr>
+                <td colspan="7" class="px-6 py-8 text-center text-zinc-500">
+                  <i data-lucide="loader" class="w-6 h-6 animate-spin mx-auto mb-2"></i>
+                  <p>Loading results...</p>
                 </td>
               </tr>
             </tbody>
@@ -427,7 +273,7 @@
         <div
           class="border-t border-zinc-800 px-6 py-4 flex items-center justify-between"
         >
-          <p class="text-sm text-zinc-500">Showing 1-5 of 234 results</p>
+          <p class="text-sm text-zinc-500" id="paginationInfo">Showing 0 results</p>
           <div class="flex items-center gap-2">
             <button
               class="px-3 py-2 bg-zinc-800 hover:bg-zinc-700 rounded-lg transition-colors disabled:opacity-50"
@@ -450,11 +296,6 @@
             <button
               class="px-3 py-2 bg-zinc-800 hover:bg-zinc-700 rounded-lg transition-colors"
             >
-              47
-            </button>
-            <button
-              class="px-3 py-2 bg-zinc-800 hover:bg-zinc-700 rounded-lg transition-colors"
-            >
               <i data-lucide="chevron-right" class="w-4 h-4"></i>
             </button>
           </div>
@@ -469,8 +310,220 @@
     <script>
       lucide.createIcons();
 
-      // Initialize authentication
-      initAuth();
+      let allResults = [];
+      let currentUser = null;
+      let allQuizzes = [];
+
+      // Initialize page
+      async function initPage() {
+        currentUser = await initAuth();
+        if (currentUser) {
+          await loadResults();
+        }
+      }
+
+      // Load all results from database
+      async function loadResults() {
+        try {
+          console.log("📊 Fetching results from database...");
+
+          const response = await fetch("/api/results/teacher/stats", {
+            method: "GET",
+            credentials: "include",
+            headers: {
+              "Content-Type": "application/json"
+            }
+          });
+
+          console.log("📊 Response status:", response.status);
+
+          if (!response.ok) {
+            const error = await response.json();
+            throw new Error(error.message || "Failed to load results");
+          }
+
+          const data = await response.json();
+          console.log("📊 Received data:", data);
+
+          allResults = data.data || [];
+          console.log("📊 Results count:", allResults.length);
+
+          // Update statistics
+          if (data.stats) {
+            document.getElementById("totalAttempts").textContent = data.stats.totalAttempts;
+            document.getElementById("avgScore").textContent = data.stats.averageScore + "%";
+            
+            // Calculate highest score
+            const highestScore = allResults.length > 0 
+              ? Math.max(...allResults.map(r => r.percentage || 0))
+              : 0;
+            document.getElementById("highScore").textContent = highestScore + "%";
+
+            // Calculate pass rate
+            const passPercentage = 60; // default pass percentage
+            const passedCount = allResults.filter(r => r.percentage >= passPercentage).length;
+            const passRate = allResults.length > 0 
+              ? Math.round((passedCount / allResults.length) * 100)
+              : 0;
+            document.getElementById("passRate").textContent = passRate + "%";
+          }
+
+          // Load quizzes for filter dropdown
+          await loadQuizzesForFilter();
+
+          // Display results
+          displayResults(allResults);
+
+        } catch (error) {
+          console.error("❌ Error loading results:", error);
+          const tbody = document.getElementById("resultsTableBody");
+          tbody.innerHTML = `
+            <tr>
+              <td colspan="7" class="px-6 py-8 text-center text-red-500">
+                <i data-lucide="alert-circle" class="w-8 h-8 mx-auto mb-2"></i>
+                <p class="font-semibold">Error loading results</p>
+                <p class="text-sm text-zinc-400 mt-1">${error.message}</p>
+              </td>
+            </tr>
+          `;
+          lucide.createIcons();
+        }
+      }
+
+      // Load quizzes for dropdown filter
+      async function loadQuizzesForFilter() {
+        try {
+          const userId = currentUser._id || currentUser.id;
+          const response = await fetch(`/api/quizzes?teacher=${userId}`, {
+            credentials: "include"
+          });
+
+          if (response.ok) {
+            const data = await response.json();
+            const quizzes = data.quizzes || [];
+            allQuizzes = quizzes;
+
+            const quizFilter = document.getElementById("quizFilter");
+            quizzes.forEach(quiz => {
+              const option = document.createElement("option");
+              option.value = quiz._id;
+              option.textContent = quiz.title;
+              quizFilter.appendChild(option);
+            });
+          }
+        } catch (error) {
+          console.error("Error loading quizzes:", error);
+        }
+      }
+
+      // Display results in table
+      function displayResults(results) {
+        const tbody = document.getElementById("resultsTableBody");
+
+        if (!results || results.length === 0) {
+          tbody.innerHTML = `
+            <tr>
+              <td colspan="7" class="px-6 py-8 text-center text-zinc-500">
+                <i data-lucide="inbox" class="w-8 h-8 mx-auto mb-2 opacity-50"></i>
+                <p class="font-semibold">No results yet</p>
+                <p class="text-sm mt-1">Student results will appear here after they complete quizzes.</p>
+              </td>
+            </tr>
+          `;
+          document.getElementById("paginationInfo").textContent = "Showing 0 results";
+          lucide.createIcons();
+          return;
+        }
+
+        tbody.innerHTML = results.map((result, index) => {
+          const isPassed = result.percentage >= (result.quiz?.passPercentage || 60);
+          const studentName = result.student?.name || result.user?.name || "Unknown Student";
+          const quizTitle = result.quiz?.title || "Unknown Quiz";
+          const date = new Date(result.completedAt).toLocaleDateString();
+          const timeInMinutes = Math.round(result.timeTaken / 60);
+          const initials = studentName.split(" ").map(n => n[0]).join("").toUpperCase().slice(0, 2);
+
+          return `
+            <tr class="hover:bg-zinc-800/50 transition-colors">
+              <td class="px-6 py-4">
+                <div class="flex items-center gap-3">
+                  <div class="w-8 h-8 bg-brand-500 rounded-full flex items-center justify-center flex-shrink-0">
+                    <span class="text-sm font-medium text-white">${initials}</span>
+                  </div>
+                  <span class="font-medium">${studentName}</span>
+                </div>
+              </td>
+              <td class="px-6 py-4 text-zinc-400">${quizTitle}</td>
+              <td class="px-6 py-4">
+                <span class="font-semibold ${isPassed ? "text-green-400" : "text-red-400"}">
+                  ${result.percentage}%
+                </span>
+              </td>
+              <td class="px-6 py-4">
+                <span class="px-2 py-1 ${isPassed ? "bg-green-500/10 text-green-400" : "bg-red-500/10 text-red-400"} text-xs font-medium rounded-full">
+                  ${isPassed ? "Passed" : "Failed"}
+                </span>
+              </td>
+              <td class="px-6 py-4 text-zinc-400">${timeInMinutes} min</td>
+              <td class="px-6 py-4 text-zinc-400">${date}</td>
+              <td class="px-6 py-4 text-right">
+                <button
+                  class="p-2 hover:bg-zinc-700 rounded-lg transition-colors"
+                  onclick="viewResult('${result._id}')"
+                  title="View Details"
+                >
+                  <i data-lucide="eye" class="w-4 h-4 text-zinc-400"></i>
+                </button>
+              </td>
+            </tr>
+          `;
+        }).join("");
+
+        document.getElementById("paginationInfo").textContent = 
+          `Showing 1-${results.length} of ${results.length} results`;
+
+        lucide.createIcons();
+      }
+
+      // View individual result
+      window.viewResult = function(resultId) {
+        window.location.href = `/student-result.html?id=${resultId}`;
+      };
+
+      // Quiz filter change event
+      document.getElementById("quizFilter").addEventListener("change", (e) => {
+        const quizId = e.target.value;
+        
+        if (quizId === "all") {
+          displayResults(allResults);
+        } else {
+          const filtered = allResults.filter(r => r.quiz?._id === quizId);
+          displayResults(filtered);
+        }
+      });
+
+      // Time filter change event
+      document.getElementById("timeFilter").addEventListener("change", (e) => {
+        const timeFilter = e.target.value;
+        const now = new Date();
+        let filtered = allResults;
+
+        if (timeFilter === "today") {
+          const today = new Date(now.getFullYear(), now.getMonth(), now.getDate());
+          filtered = allResults.filter(r => new Date(r.completedAt) >= today);
+        } else if (timeFilter === "week") {
+          const weekAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
+          filtered = allResults.filter(r => new Date(r.completedAt) >= weekAgo);
+        } else if (timeFilter === "month") {
+          const monthAgo = new Date(now.getTime() - 30 * 24 * 60 * 60 * 1000);
+          filtered = allResults.filter(r => new Date(r.completedAt) >= monthAgo);
+        }
+
+        displayResults(filtered);
+      });
+
+      // Initialize page on load
+      initPage();
     </script>
   </body>
 </html>
